tests/errors/err_collection_new_non_zone.mix
// ERROR: argument 1 of 'new': expected Zone, got int
main()
    xs = List[int].new(1)
